--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --bg-input: #eff1f3;
   --utility-button-bg: #EEEEEE;
   
-  --text-primary: #1a1a1a;
+  --text-primary: #343434fa;
   --text-primary1: #E0E0E0;
   --text-secondary: #4a5568;
   --text-tertiary: #718096;
